--- a/Sunday/Responsive Design/ex5-TomerEx/index.html
+++ b/Sunday/Responsive Design/ex5-TomerEx/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ex5.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="ex5.css">
 </head>
 <body>
-    <div class="container">
-        <div class="img-card">
-            <div class="circle">
-                📷
-            </div>
-        </div>
-        <div class="description-card">
-            <h1>Premium Laptop</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dicta dolor, ipsa enim repellat expedita repudiandae maxime eveniet id cumque non distinctio hic?</p>                        
-            <div class="transaction-row">
-                <span class="price">1,299$</span>
-                <button class="card">Add to Card</button>
-            </div>
-        </div>
-    </div>
+  <nav>
+    <ul>
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
+  </nav>
+
 </body>
 </html>
