--- a/PortfolioProject/index.html
+++ b/PortfolioProject/index.html
@@ -35,7 +35,7 @@
                 <div class="col1">
                     <h1>Full-Stack Developer</h1>
                     <div id="intro">I create beautiful and functional web experiences using modern technologies. Passionate about clean code and user-centered design.</div>
-                    <button>Get In Touch</button>
+                    <button id=>Get In Touch</button>
                 </div>
                 <div class="col2">
                     <div class="profile-frame">
@@ -149,13 +149,29 @@
                     </div>
 
                     <div class="contact-information">
-                        
+                          <h2>Contact Information</h2>
+                                <ul class="contact-list">
+                                    <li><span class="icon">📧</span><a href="#">yhananguy@gmail.com</a></li>
+                                    <li><span class="icon">📱</span><a href="#">+972-542562685</a></li>
+                                    <li><span class="icon">📍</span>Petah Tikva</li>
+                                </ul>
+                            <div class="social-links">
+                                <a href="https://www.linkedin.com/in/guy-hanan-4055a3221/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                                in
+                                </a>
+                                <a href="https://github.com/hananguy" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                                gh
+                                </a>
+                                <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="X">
+                                x
+                                </a>
+                            </div>
                     </div>
                 </div>
             </div>
 
             <div class="rigths-bar">
-
+                <div>2025 Guy Hanan. All rights reserved.</div>
             </div>
 
    `     
